[package]
name = "korobu"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
arboard = "3.2.0"
argon2 = "0.4.1"
chacha20poly1305 = "0.10.1"
eframe = "0.19.0"
env_logger = "0.10.0"
hex = "0.4.3"
image = "0.24.5"
lazy_static = "1.4.0"
log = "0.4.17"
num-bigint = "0.4.3"
num-traits = "0.2.15"
orion = "0.17.2"
rand = "0.8.5"
rand_core = "0.6.4"
tokio = { version = "1.22.0", features = ["macros", "full"] }
zeroize = { version = "1.5.7", features = ["derive"] }
